Implement authorized encrypted Asset attributes for HV-21.3
